upgrade to single pkg

--- a/content/service-design-delivery-process/alpha.mdx
+++ b/content/service-design-delivery-process/alpha.mdx
@@ -14,7 +14,7 @@ As you progress through Alpha, you will produce new hypotheses as you discover n
 In Alpha, you:
 
 - take your hypotheses from Discovery stage and create some high-level concepts
-  continue to develop a vision for the service using your user journey and user story map
+- continue to develop a vision for the service using your user journey and user story map
 - create storyboards to see possible solutions
 - create prototypes to test hypotheses with users — you should explore hypotheses with different kinds and fidelity of prototypes
 - keep updating your decision register that contains the evidence that guides what you will build in Beta stage
