--- a/content/service-design-delivery-process/discovery.mdx
+++ b/content/service-design-delivery-process/discovery.mdx
@@ -8,8 +8,7 @@ Before you start designing and building a service, you need to understand the pr
 This means learning about:
 
 - your users and what they’re trying to achieve
-- the government’s policy intent for the service, so that you are able to align this with user needs
-  and existing business processes associated with the service
+- the government’s policy intent for the service, so that you are able to align this with user needs and existing business processes associated with the service
 - technology and system architecture that supports these processes
 - how data flows through the service
 - any obvious technical, legislative or other constraints relating to the service
