--- a/content/strategy/team-structure/index.mdx
+++ b/content/strategy/team-structure/index.mdx
@@ -19,9 +19,7 @@ Readiness activities:
 
 - requirements
 - approved arrangements
-- export registration
-
-  s
+- {'export registrations'}
 - fit and proper person tests.
 - establishments
 
@@ -31,10 +29,7 @@ Everything a business needs to do to get a single consignment cleared and export
 
 Clearance activities:
 
-- export documentatio
-
-  n
-
+- {'export documentation'}
 - quotes
 - inspections.
 
@@ -58,4 +53,4 @@ Intelligence activities:
 - data and insights
 - supply chain and tractability.
 
-![Diagram of the 4 service lines and their responsibilities: readiness, clearance, assurance and intelligence.](/images/service-lines.png 'Agricultural export service lines')
+{/* *![Diagram of the 4 service lines and their responsibilities: readiness, clearance, assurance and intelligence.](/images/service-lines.png 'Agricultural export service lines') */}
