--- a/content/strategy/team-structure/index.mdx
+++ b/content/strategy/team-structure/index.mdx
@@ -19,7 +19,7 @@ Readiness activities:
 
 - requirements
 - approved arrangements
-- {'export registrations'}
+- {'export'} registrations
 - fit and proper person tests.
 - establishments
 
@@ -29,7 +29,7 @@ Everything a business needs to do to get a single consignment cleared and export
 
 Clearance activities:
 
-- {'export documentation'}
+- {'export'} documentation
 - quotes
 - inspections.
 
